@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.857 2007-10-15 16:51:28 castaglia Exp $
+$Id: NEWS,v 1.858 2007-10-15 17:27:25 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -44,6 +44,9 @@ CVS
 - Bug #2937 - Should list modules (with versions) for modules loaded as DSOs.
   The -vv command-line option now shows all modules (and versions), both
   static and shared.  See the RELEASE_NOTES for more details.
+- Bug #2993 - Unable to compile 1.3.1 on Debian unstable/amd64.  The configure
+  script was brokenly checking for the umode_t data type, which is not needed
+  by the proftpd source code.
 
 1.3.1 - Released 5-Oct-2007
 --------------------------------
